@@ -1,5 +1,6 @@
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Constants {
 
@@ -9,7 +10,7 @@ public class Constants {
 
     public static List<String> getFirstNamesList() {
         return Arrays.stream(NAMES.split(","))
-                .toList();
+                .collect(Collectors.toList());
 
     }
 }
