@@ -5,6 +5,7 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class Executor {
@@ -18,7 +19,7 @@ public class Executor {
 
         List<Future<List<NameCoordinates>>> a=IntStream.range(0,pages.size())
                 .mapToObj(i -> es.submit(new SearchThread(pages.get(i), stringsToSearch, linesPerBatch * i)))
-                .toList();
+                .collect(Collectors.toList());
 
         a.forEach(listFuture -> {
             try {
